cloud-apps/dial-a-schedule/src/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dial-a-schedule
  namespace: dial-a-schedule
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dial-a-schedule
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dial-a-schedule
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: backend
          image: ghcr.io/dannixon/emfcamp-dial-a-schedule:695f11bcc2fcde7a477e321960a0b5273411a10f
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: dial-a-schedule
spec:
  selector:
    app.kubernetes.io/name: dial-a-schedule
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
