cloud-apps/dial-a-schedule/src/k8s/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: dial-a-schedule
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`dial-a-schedule.emfcamp.dan-nixon.com`)
      services:
        - Kind: Service
          name: http
          port: 8000
  tls:
    secretName: tls-cert
